--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,66 +7,68 @@
     tools:context="com.example.a00.bdcapp.LoginActivity">
 
     <ImageView
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:src="@drawable/logo"
-        android:layout_marginLeft="110dp"
-        android:layout_marginTop="80dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
         android:id="@+id/logo"/>
     <EditText
         android:layout_height="50dp"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_marginTop="30dp"
         android:textSize="16sp"
         android:textColor="#FFAD33"
-        android:hint="账户"
+        android:layout_centerHorizontal="true"
         android:id="@+id/username"
-        android:layout_below="@+id/logo"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="30dp" />
+        android:layout_centerInParent="true"
+        android:hint="账户/手机号" />
 
     <EditText
         android:layout_height="50dp"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:textSize="16sp"
         android:textColor="#FFAD33"
         android:hint="密码"
         android:id="@+id/password"
         android:inputType="textPassword"
         android:layout_below="@id/username"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="30dp"/>
+        android:layout_centerHorizontal="true" />
+
     <LinearLayout
+        android:id="@+id/layout_log_re"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/layout_log_re"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/password">
+
         <Button
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textSize="16sp"
-            android:id="@+id/register"
-            android:text="注册"
-            android:background="#00000000"
-            android:layout_marginLeft="40dp"/>
-        <Button
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textSize="16sp"
             android:id="@+id/login"
-            android:text="登录"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="10dp"
             android:background="#00000000"
-            android:layout_marginLeft="40dp"/>
+            android:text="登录"
+            android:textSize="16sp" />
+        <Button
+            android:id="@+id/register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="10dp"
+            android:background="#00000000"
+            android:text="注册"
+            android:textSize="16sp" />
 
     </LinearLayout>
-    <Button
+
+    <TextView
+        android:id="@+id/forgetpassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="忘记密码？"
-        android:id="@+id/forgetpassword"
-        android:background="#00000000"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="10dp"/>
+        android:layout_centerHorizontal="true"
+        android:background="#00000000"
+        android:text="忘记密码？" />
 </RelativeLayout>
