--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,53 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
     tools:context="com.example.a00.bdcapp.RegisterActivity">
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:text="用户注册"
+        android:textSize="20dp" />
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1px"
+        android:layout_below="@+id/title"
+        android:layout_marginTop="8dp"
+        android:background="#000000" />
     <EditText
-        android:layout_width="match_parent"
+        android:id="@+id/register_phone_number"
         android:layout_height="wrap_content"
         android:hint="手机号"
-        android:id="@+id/phonenumber"
+        android:layout_width="300dp"
         android:layout_marginTop="90dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"/>
-    <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:id="@+id/register_password"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:id="@+id/verify"
+        android:layout_below="@id/register_phone_number"
+        android:layout_centerHorizontal="true"
+        android:hint="密码"
+        android:inputType="textPassword" />
+
+    <EditText
+        android:id="@+id/register_check_password"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/register_password"
+        android:layout_centerHorizontal="true"
+        android:hint="确认密码"
+        android:inputType="textPassword" />
+    <LinearLayout
+        android:id="@+id/register_verify"
+        android:layout_height="wrap_content"
+        android:layout_width="300dp"
         android:orientation="horizontal"
-        android:layout_below="@+id/phonenumber"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp">
+        android:layout_below="@+id/register_check_password"
+        android:layout_centerHorizontal="true">
         <EditText
-            android:layout_width="200dp"
+            android:id="@+id/register_verifycode"
             android:layout_height="wrap_content"
             android:hint="短信验证码"
-            android:id="@+id/verifycode"/>
+            android:layout_width="230dp" />
 
         <Button
-            android:id="@+id/forverifycode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/verify"
-            android:layout_below="@+id/phonenumber"
+            android:id="@+id/register_forverifycode"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:layout_alignEnd="@+id/register_verifycode"
             android:layout_marginEnd="39dp"
             android:background="#42c5f9"
             android:text="获取验证码" />
 
     </LinearLayout>
     <Button
-        android:layout_width="match_parent"
+        android:id="@+id/register"
         android:layout_height="wrap_content"
-        android:text="注册/登录"
+        android:layout_width="300dp"
         android:background="#42c5f9"
-        android:id="@+id/reg_or_login"
-        android:layout_below="@+id/verify"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
+        android:layout_below="@+id/register_verify"
+        android:layout_centerHorizontal="true"
+        android:text="注册"
         android:layout_marginTop="10dp"/>
 
 
