--- a/app/src/main/res/layout/fragment_blank_fragment_one.xml
+++ b/app/src/main/res/layout/fragment_blank_fragment_one.xml
@@ -95,20 +95,22 @@
         android:layout_below="@+id/storytitle"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.7"
+                    android:text="当前计划"
+                    android:textSize="20sp"
+                    android:layout_marginLeft="5dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="我的课程"
-                android:textSize="20sp"
-                android:layout_marginLeft="5dp"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_weight="0.3"
+
                 android:text="更多"
                 />
 
