--- a/app/src/main/res/layout/activity_search_words.xml
+++ b/app/src/main/res/layout/activity_search_words.xml
@@ -16,6 +16,7 @@
     <ListView
         android:id="@+id/word_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:divider="@null" />
 
 </LinearLayout>
