--- a/app/src/main/res/layout/activity_mine.xml
+++ b/app/src/main/res/layout/activity_mine.xml
@@ -16,7 +16,7 @@
             android:layout_centerHorizontal="true"
             android:src="@drawable/icon" />-->
 
-    <LinearLayout
+<!--    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -38,7 +38,7 @@
             android:text="小猪佩奇"
             android:textSize="20sp" />
 
-    </LinearLayout>
+    </LinearLayout>-->
 
     <Button
         android:id="@+id/user_revise"
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_picture"
         android:background="#00000000"
-        android:text="修改个人信息" />
+        android:text="基本信息" />
 
     <Button
         android:id="@+id/user_wordlist"
