--- a/app/src/main/res/layout/activity_revise_information.xml
+++ b/app/src/main/res/layout/activity_revise_information.xml
@@ -6,29 +6,50 @@
     android:layout_height="match_parent"
     tools:context="com.example.a00.fragment3.ReviseInformationActivity">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/headshot"
+        android:src="@drawable/book_pic"
+        android:layout_centerHorizontal="true"/>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:id="@+id/picture"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/headshot"
+        android:id="@+id/user_id">
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="头像"
-            android:textColor="#000000"
-            android:textSize="15sp" />
-        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            />
+            android:text="账号"
+            android:textSize="15sp"
+            android:textColor="#000000"/>
+        <EditText
+            android:id="@+id/change_id"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="10dp"
+            android:background="@android:color/transparent"
+            android:gravity="right"
+            android:hint="输入昵称"
+            android:maxWidth="100dp"
+            android:singleLine="true"
+            android:textColor="#666666"
+            android:textSize="14sp"
+            android:inputType="textNoSuggestions"/>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@+id/picture"
         android:layout_marginTop="10dp"
+        android:layout_below="@+id/user_id"
         android:id="@+id/name">
         <TextView
             android:layout_width="wrap_content"
@@ -120,7 +141,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="城市"
+            android:text="电话号码"
             android:textSize="15sp"
             android:textColor="#000000"/>
         <EditText
@@ -149,7 +170,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="学校"
+            android:text="邮箱"
             android:textSize="15sp"
             android:textColor="#000000"/>
         <EditText
