--- a/app/src/main/res/layout/activity_start_recite_word.xml
+++ b/app/src/main/res/layout/activity_start_recite_word.xml
@@ -99,7 +99,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="………………………………"
+                    android:text=""
                     android:inputType="textMultiLine"
                     android:layout_marginTop="10dp"
                     android:id="@+id/eg_show"/>
