实现单词背诵功能 实现单词背诵功能

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:hint="输入"
             android:layout_weight="1"
-            android:id="@+id/print"/>
+            android:id="@+id/search_text_edit"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
