--- a/app/src/main/res/layout/activity_my_courses.xml
+++ b/app/src/main/res/layout/activity_my_courses.xml
@@ -71,11 +71,11 @@
         android:layout_height="1dp"
         android:background="#000000" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/id_page_vp"
+    <ListView
+        android:id="@+id/book_list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" >
-    </android.support.v4.view.ViewPager>
+        android:layout_height="wrap_content">
+
+    </ListView>
 
 </LinearLayout>
