--- a/app/src/main/res/layout/activity_revise_information.xml
+++ b/app/src/main/res/layout/activity_revise_information.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent"
     tools:context="com.example.a00.fragment3.ReviseInformationActivity">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.example.a00.fragment1.CircleImageView
         android:id="@+id/headshot"
-        android:src="@drawable/book_pic"
-        android:layout_centerHorizontal="true"/>
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/icon"
+        android:layout_marginTop="5dp"/>
 
 
     <LinearLayout
