--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#FF4081</color>
     <color name="addToPlan">#D2691E</color>
-    <color name="addedToPlan">#D2B48C</color>
+    <color name="addedToPlan">#8ca8d2</color>
 </resources>
