查询单词listview添加分割线、圆形布局

--- a/app/src/main/res/layout/activity_search_words.xml
+++ b/app/src/main/res/layout/activity_search_words.xml
@@ -17,6 +17,7 @@
         android:id="@+id/word_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@null" />
+        android:divider="@color/colorPrimary"
+        android:dividerHeight="1dp"/>
 
 </LinearLayout>
